feat(demo): 升级xp2p插件到3.2.17，修复一些问题

--- a/demo/miniprogramIoT/components/iot-device-input/input.wxml
+++ b/demo/miniprogramIoT/components/iot-device-input/input.wxml
@@ -28,41 +28,45 @@
             </view>
           </view>
         </view>
-        <view wx:if="{{scene === 'live'}}" style="margin-bottom: 30rpx;">
-          <view>通道选择</view>
-          <label wx:for="{{channels}}"><switch type="checkbox" checked="{{item.checked}}" data-value="{{item.value}}" data-index="{{index}}" bindchange="switchChannel"/>{{item.name}}</label>
+        <view wx:if="{{scene === 'live'}}">
+          <view class="input-item">
+            <view>通道选择</view>
+            <label wx:for="{{channels}}" wx:key="value"><switch type="checkbox" checked="{{item.checked}}" data-value="{{item.value}}" data-index="{{index}}" bindchange="switchChannel"/>{{item.name}}</label>
+          </view>
+          <view class="input-item">
+            <view>对讲方式</view>
+            <radio-group bindchange="changeIntercomTypeRadio">
+              <label wx:for="{{intercomTypeList}}" wx:key="value">
+                <view class="radio-list-item">
+                  <radio value="{{item.value}}" checked="{{item.checked}}" class="radio-list-item-radio"/>
+                  <view class="radio-list-item-text">
+                    <view>{{item.text}}</view>
+                    <view wx:if="{{item.desc}}">{{item.desc}}</view>
+                  </view>
+                </view>
+              </label>
+            </radio-group>
+          </view>
+          <view class="input-item">
+            <view>语音采集方式<text class="text-btn font-small" bindtap="copyDocUrl" data-doc="https://mp.weixin.qq.com/wxopen/plugindevdoc?appid=wx1319af22356934bf#6-">查看详细说明</text></view>
+            <radio-group bindchange="changeVoiceTypeRadio">
+              <label wx:for="{{voiceTypeList}}" wx:key="value">
+                <view class="radio-list-item">
+                  <radio value="{{item.value}}" checked="{{item.checked}}" class="radio-list-item-radio"/>
+                  <view class="radio-list-item-text">
+                    <view>{{item.text}}</view>
+                    <view wx:if="{{item.desc}}">{{item.desc}}</view>
+                  </view>
+                </view>
+              </label>
+            </radio-group>
+          </view>
         </view>
         <view>
           <view>其它选项</view>
           <view wx:for="{{simpleChecks}}" wx:key="field" class="input-item {{item.scene && item.scene !== scene ? 'hide' : ''}}">
             <label><switch type="checkbox" checked="{{item.checked}}" data-field="{{item.field}}" data-index="{{index}}" bindchange="switchSimpleCheck"/>{{item.text}}</label>
           </view>
-        </view>
-        <view class="input-item" wx:if="{{scene === 'live'}}">
-          <view>对讲方式:<text class="text-btn font-small" bindtap="copyDocUrl" data-doc="https://mp.weixin.qq.com/wxopen/plugindevdoc?appid=wx1319af22356934bf#6-">查看详细说明</text></view>
-          <radio-group bindchange="changeVoiceTypeRadio">
-            <label wx:for="{{voiceTypeList}}" wx:key="value">
-              <view class="voice-type-item">
-                <radio value="{{item.value}}" checked="{{item.checked}}" class="voice-type-item-radio"/>
-                <view class="voice-type-item-text">
-                  <view>{{item.text}}</view>
-                  <view>{{item.desc}}</view>
-                </view>
-              </view>
-            </label>
-          </radio-group>
-          <view>语音/视频对讲</view>
-          <radio-group bindchange="changeIntercomTypeRadio">
-            <label wx:for="{{intercomTypeList}}" wx:key="value">
-              <view class="voice-type-item">
-                <radio value="{{item.value}}" checked="{{item.checked}}" class="voice-type-item-radio"/>
-                <view class="voice-type-item-text">
-                  <view>{{item.text}}</view>
-                  <view wx:if="{{item.desc}}">{{item.desc}}</view>
-                </view>
-              </view>
-            </label>
-          </radio-group>
         </view>
       </view>
     </view>
