--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback-cloudmjpg/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback-cloudmjpg/demo.wxml
@@ -12,7 +12,7 @@
       muted="{{muted}}"
       rotate="{{rotate}}"
       fill="{{fill}}"
-      showLog="{{showLog}}"
+      showLog="{{options.playerLog}}"
       showDebugInfo="{{showDebugInfo}}"
       bind:playerstatechange="onPlayerEvent"
       bind:streamstatechange="onPlayerEvent"
