--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc-playback/demo.wxml
@@ -22,7 +22,7 @@
       muted="{{muted}}"
       orientation="{{orientation}}"
       fill="{{fill}}"
-      showLog="{{showLog}}"
+      showLog="{{options.playerLog}}"
       showDebugInfo="{{showDebugInfo}}"
       onlyp2p="{{onlyp2pMap && onlyp2pMap.flv}}"
       streamChannel="{{streamChannel}}"
