--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-server/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-server/demo.wxml
@@ -18,7 +18,7 @@
       mode="{{options.playerRTC ? 'RTC' : 'live'}}"
       muted="{{muted}}"
       orientation="{{orientation}}"
-      showLog="{{showLog}}"
+      showLog="{{options.playerLog}}"
       showDebugInfo="{{showDebugInfo}}"
       onlyp2p="{{onlyp2pMap && onlyp2pMap.flv}}"
       bind:playerstatechange="onPlayerEvent"
