--- a/demo/miniprogramIoT/pages/video/player.wxss
+++ b/demo/miniprogramIoT/pages/video/player.wxss
@@ -8,6 +8,9 @@
 .my-player.full .iot-player {
   height: 100vh;
 }
+.my-player .mock-p2p-player .player-content {
+  top: 50rpx;
+}
 
 /* 3.2.2 之前这么覆盖，注意给组件加class属性 */
 .my-player .player-container {
@@ -16,6 +19,18 @@
 }
 
 /* 自己的 */
+.p2p-live-player {
+  position: relative;
+}
+.player-channel {
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 20rpx;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+}
 .player-controls-container {
   box-sizing: border-box;
   position: absolute;
@@ -24,6 +39,7 @@
   bottom: 0;
   padding: 20rpx;
   background-color: rgba(0, 0, 0, 0.3);
+  color: white;
   display: flex;
   align-items: center;
 }
@@ -40,7 +56,6 @@
   min-width: 50rpx;
   height: 50rpx;
   line-height: 50rpx;
-  color: white;
 }
 .player-controls-container .player-controls.left .player-control-item {
   margin-right: 20rpx;
