--- a/demo/miniprogramIoT/components/iot-device-input/input.wxss
+++ b/demo/miniprogramIoT/components/iot-device-input/input.wxss
@@ -13,13 +13,13 @@
   margin-bottom: 10rpx;
 }
 
-.voice-type-item {
+.radio-list-item {
   margin-bottom: 10rpx;
 }
-.voice-type-item-radio {
+.radio-list-item-radio {
   float: left;
 }
-.voice-type-item-text {
+.radio-list-item-text {
   padding-left: 60rpx;
 }
 
