--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/components/p2p-live-player/p2p-live-player.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/components/p2p-live-player/p2p-live-player.wxml
@@ -5,10 +5,11 @@
     deviceInfo="{{deviceInfo}}"
     xp2pInfo="{{xp2pInfo}}"
     liveStreamDomain="{{liveStreamDomain}}"
+    needCheckStream="{{needCheckStream}}"
     sceneType="{{sceneType}}"
     streamChannel="{{streamChannel}}"
     streamQuality="{{innerStreamQuality}}"
-    needCheckStream="{{needCheckStream}}"
+    streamParams="{{streamParams}}"
     mode="{{mode}}"
     soundMode="{{soundMode}}"
     muted="{{muted}}"
