feat: 升级xp2p插件到4.1.2，支持自定义截图提示

--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxml
@@ -65,7 +65,7 @@
       </view>
     </view>
     <view class="page-section page-section-gap">
-      <view class="page-section-title">【更多播放器属性】</view>
+      <view class="page-section-title">【播放器属性】</view>
       <view class="margin-left">
         <view>
           soundMode: {{soundMode}}
