--- a/demo/miniprogramIoT/pages/index/index.wxml
+++ b/demo/miniprogramIoT/pages/index/index.wxml
@@ -4,6 +4,7 @@
     <view class="item-btns group-button-area">
       <button type="primary" class="group-button" size="mini"
         bindtap="gotoPage"
+        data-check-platform="1"
         data-url="/pages/video/pages/xp2p-demo-{{item.p2pMode === 'server' ? 'server' : 'ipc'}}/demo?cfg={{item.cfg}}"
       >
         P2P监控
@@ -12,6 +13,7 @@
         <button type="primary" class="group-button {{item.isMjpgDevice ? 'disabled' : ''}}" size="mini"
           disabled="{{item.isMjpgDevice}}"
           bindtap="gotoPage"
+          data-check-platform="1"
           data-url="/pages/video/pages/xp2p-demo-ipc-playback/demo?cfg={{item.cfg}}"
         >
           P2P回放
@@ -31,16 +33,17 @@
 <view class="page-body" style="padding-bottom: 20rpx">
   <view class="page-section page-section-gap">
     <view class="notice-box">
-      <view>· P2P播放器<text style="color: red">不支持开发者工具调试和真机调试</text>，播放器相关功能请使用二维码预览方式体验</view>
+      <view>· 真机体验请使用已上传版本或二维码预览，<text style="color: red">不支持真机调试，不支持PC</text></view>
+      <view>· 开发者工具中仅支持获取p2p数据，<text style="color: red">不支持播放</text></view>
       <view>· 使用期间需保持设备在线且 xp2pinfo 有效，可以在<text class="text-btn" bindtap="copyDocUrl" data-doc="https://cloud.tencent.com/document/product/1131/52739">控制台云日志</text>查看设备 _sys_xp2p_info 属性</view>
-      <view>· 如果遇到问题，可以查看<text class="text-btn" bindtap="copyDocUrl" data-doc="https://mp.weixin.qq.com/wxopen/plugindevdoc?appid=wx1319af22356934bf">插件开发文档</text>中的常见问题部分</view>
-      <view>· 如果仍未解决，可以打开<text class="text-btn" bindtap="gotoPage" data-url="/pages/user-files/files?name=logs">Log管理页</text>，发送最新log给我们</view>
+      <view>· 如果遇到问题，可以查看<text class="text-btn" bindtap="copyDocUrl" data-doc="https://mp.weixin.qq.com/wxopen/plugindevdoc?appid=wx1319af22356934bf">插件开发文档</text>中的常见问题部分，或者提供 xp2pUUID 和出现时间给我们</view>
       <view>· <text class="text-btn" bindtap="openSetting">《小程序设置》</text></view>
       <view>· <text class="text-btn" bindtap="gotoPage" data-url="/pages/private-policy/private-policy">《小程序服务声明》</text></view>
     </view>
   </view>
   <view class="page-section page-section-gap">
     <view>hostInfo: <text user-select>{{hostInfo}}</text></view>
+    <view>sysInfo: <text user-select>{{sysInfo}}</text></view>
     <view>wxVersion: <text user-select>wx {{wxVersion}} / sdk {{wxSDKVersion}}</text></view>
     <view>pluginVersion: <text user-select>p2p-player {{playerVersion}} / xp2p {{xp2pVersion}}</text></view>
     <view>userId: <text user-select>{{userId}}</text></view>
